Add support for building noarch kernels (#319)
This change adds support for building noarch kernels. So far we have
used the universal variant for kernels that do not have any AoT-compiled
code. However, the universal variant has two important issues:

1. A kernel without AoT-compiled might still be backend-specific. E.g.
NVIDIA CuTe-based kernels are not universal in the sense that they don't
work on non-NVIDIA GPUs.
2. We cannot specify dependencies per backend.

To solve these issues, we introduce the noarch variants to replace
universal kernels. Noarch kernels have variants of the shape
`torch-<backend>` (e.g. `torch-xpu`). This resolves the issues outlined.

To support no-arch kernels, we update the `build.toml` format to v3,
making the following changes:

* `general.universal` is removed.
* `general.backends` is introduced. This required option is used to list
what backends the kernel supports.
* `general.cuda-{minver,maxver}` has been moved to the `general.cuda`
section.

If a kernel supports backend X and has one or more `kernels.*` sections
with `backend = "X"`, then the kernel is an AoT-compiled kernel for that
backend. Otherwise, it is a noarch kernel for that backend. Suppose that
we have:

```toml
[general]
# ...
backends = ["cuda", "xpu"]
#...

[kernel.mykernel]
backend = "xpu"
# ...
```

then the XPU kernel will be AoT-compiled (e.g.
`build/torch29-cxx11-xpu20252-x86_64-linux`), whereas the CUDA kernel
will be noarch (`torch-cuda`).

An older `build.toml` can be updated automatically with `build2cmake
update-build build.toml`.

--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -58,10 +58,10 @@ jobs:
       - name: Test that we can build a test shell (e.g. that gcc corresponds to CUDA-required)
         run: ( cd examples/relu && nix build .#devShells.x86_64-linux.test )
 
-      - name: Build silu-and-mul-universal kernel
-        run: ( cd examples/silu-and-mul-universal && nix build .\#redistributable.torch29-cxx11-cu126-x86_64-linux )
-      - name: Copy silu-and-mul-universal kernel
-        run: cp -rL examples/silu-and-mul-universal/result silu-and-mul-universal-kernel
+      - name: Build silu-and-mul kernel
+        run: ( cd examples/silu-and-mul && nix build .\#redistributable.torch-cuda )
+      - name: Copy silu-and-mul kernel
+        run: cp -rL examples/silu-and-mul/result silu-and-mul-kernel
 
       - name: Upload kernel artifacts
         uses: actions/upload-artifact@v4
@@ -73,7 +73,7 @@ jobs:
             relu-kernel
             relu-kernel-cpu
             relu-backprop-compile-kernel
-            silu-and-mul-universal-kernel
+            silu-and-mul-kernel
 
   test:
     name: Test kernels
