--- a/examples/relu/build.toml
+++ b/examples/relu/build.toml
@@ -1,6 +1,12 @@
 [general]
 name = "relu"
-universal = false
+backends = [
+    "cpu",
+    "cuda",
+    "metal",
+    "rocm",
+    "xpu",
+]
 
 [torch]
 src = [
