--- a/tests/Dockerfile.test-kernel
+++ b/tests/Dockerfile.test-kernel
@@ -66,7 +66,7 @@ RUN uv add numpy pytest
 COPY relu-kernel ./relu-kernel
 COPY relu-kernel-cpu ./relu-kernel-cpu
 COPY cutlass-gemm-kernel ./cutlass-gemm-kernel
-COPY silu-and-mul-universal-kernel ./silu-and-mul-universal-kernel
+COPY silu-and-mul-kernel ./silu-and-mul-kernel
 COPY examples/relu/tests ./relu_tests
 COPY examples/cutlass-gemm/tests ./cutlass_gemm_tests
 
