--- a/build2cmake/Cargo.toml
+++ b/build2cmake/Cargo.toml
@@ -20,6 +20,7 @@ rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde-value = "0.7"
+thiserror = "1"
 toml = "0.8"
 
 [build-dependencies]
